source/sass/work-casestudies.sass
.case-study-banner
  background-color: rgba(0, 0, 0, 0.25)
  background-position: center center
  background-repeat: no-repeat
  background-size: cover
  color: $white
  h1, h2, h3, h4, h5
    color: $white
  .case-study-subheadline
    font-size: rem-calc(20)
    text-transform: uppercase
  .case-study-headline
    font-size: rem-calc(56)
    font-weight: $font-weight-lighter
    line-height: rem-calc(60)
    margin-bottom: rem-calc(32)
  .case-study-site-url
    color: $white
    font-size: rem-calc(12)
    text-transform: uppercase
  &.travelmob
    background-image: url(../img/case-study-travelmob-banner.jpg)
    .case-study-headline
      @media #{$medium-up}
        width: rem-calc(500)

.case-study-content
  padding-top: rem-calc(32)
  blockquote
    color: text-dark
    font-family: $font-family-serif
    font-size: rem-calc(24)
    font-style: italic
    margin: rem-calc(50 0)
    text-align: center
  h2
    font-size: rem-calc(56)
    margin-bottom: rem-calc(38)
  h3
    font-size: rem-calc(24)
    margin-top: rem-calc(50)
  .lead
    color: $text-dark
    font-family: $font-family-serif
    font-size: rem-calc(20)
  .image-container
    padding: rem-calc(24 0)
    text-align: center
    &.before-header
      padding-bottom: 0
    figcaption
      font-size: rem-calc(14)
      font-style: italic
  .outcome
    background-color: #E9F7FC
    background-image: url(../img/logo_watermark.png)
    background-position: bottom right
    background-repeat: no-repeat
    margin-top: rem-calc(60)
    padding: rem-calc(60 0 40)

.case-study-details
  margin-top: rem-calc(6)
  @media #{$small-only}
    text-align: center
  .header
    font-size: rem-calc(18)
    font-weight: bold
    line-height: rem-calc(25)
    margin: 0
  ul
    font-size: rem-calc(14)
    font-weight: $font-weight-lighter
    margin: rem-calc(0 0 18)
    > li
      list-style: none

.case-study-related
  padding-top: 0
  .more-text
    color: $text-dark
    font-size: rem-calc(36)
    font-weight: 100
    line-height: rem-calc(44)
    padding-top: rem-calc(102)

.case-study
  img.drop-shadow
    box-shadow: 0 0 10px rgba(0,0,0,0.1)
  &.indinero
    .case-study-banner-container
      background-image: url(../img/case-study-indinero-banner.jpg)
    .case-study-headline
      @media #{$medium-up}
        width: rem-calc(700)
  &.travelmob
    .case-study-banner-container
      background-image: url(../img/case-study-travelmob-banner.jpg)
    .case-study-headline
      @media #{$medium-up}
        width: rem-calc(500)
  &.creative
    .case-study-banner-container
      background-image: url(../img/case-study-creative-banner.jpg)
    .case-study-headline
      @media #{$medium-up}
        width: rem-calc(700)

